[metadata]
name = izi18n
description = Simple python library for language Internationalisation
description-file = README.md
long_description_content_type = text/markdown
url = https://github.com/cnfilms/izi18n


project_urls =
    Bug Tracker = https://github.com/cnfilms/izi18n/issues
    Changelog = https://github.com/cnfilms/izi18n/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = dist
packages = find:
python_requires = >=3.3