[metadata]
name = izi18n
version = 1.0.0
author = Joel ONIPOH
author_email = technique@cinego.net
description = Simple python library for language Internationalisation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cnfilms/izi18n
keywords = python, i18n, Internationalisation, Internationalization, language, po, read .po file, json, translate pattern, interpolate translation
project_urls =
    Bug Tracker = https://github.com/cnfilms/izi18n/issues
    Changelog = https://github.com/cnfilms/izi18n/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
python_requires = >=3.3

[options]
packages = find:
install_requires =
    # Replace with your requirements.txt file parsing logic
    # For example, if you have requirements.txt, you can use:
    # r.strip() for r in open('requirements.txt').read().splitlines()
    dependency1
    dependency2

[options.packages.find]
exclude =
    tests*
